# mini-lang

./: CMakeLists.txt  README.md
include/: CMakeLists.txt
include/Mini/: AST.h  CMakeLists.txt  Dialect.h  Lexer.h  MLIRGen.h  MakeTiledImplementation.h  MakeTiledImplementation.td  Ops.td  Parser.h  Passes.h  ShapeInferenceInterface.h  ShapeInferenceInterface.td  ToyCombine.td
lib/Mini/: AST.cpp  CMakeLists.txt  Dialect.cpp  MLIRGen.cpp  MakeTiledImplementation.cpp  ShapeInferencePass.cpp  ToyCombine.cpp
mini-opt/: CMakeLists.txt  mini-opt.cpp
test/: codegen.mlir
